<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<parent>
		<artifactId>adapquest</artifactId>
		<groupId>ch.idsia.adaptive</groupId>
		<version>1.6.7</version>
	</parent>
	<modelVersion>4.0.0</modelVersion>

	<artifactId>adapquest-experiments</artifactId>

	<name>AdapQuestExperiments</name>

	<properties>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
	</properties>

	<build>
		<resources>
			<resource>
				<directory>src/main/resources/</directory>
				<targetPath>.</targetPath>
				<includes>
					<include>**/*.xlsx</include>
					<include>**/*.csv</include>
					<include>**/*.txt</include>
					<include>**/*.xml</include>
					<include>**/*.yaml</include>
				</includes>
			</resource>
		</resources>
		<testResources>
			<testResource>
				<directory>src/test/resources/</directory>
				<targetPath>.</targetPath>
				<includes>
					<include>**/*.csv</include>
					<include>**/*.txt</include>
					<include>**/*.xml</include>
					<include>**/*.yaml</include>
				</includes>
			</testResource>
		</testResources>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M5</version>
				<configuration>
					<argLine>
						--illegal-access=permit
					</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>3.0.0-M5</version>
				<configuration>
					<argLine>
						--illegal-access=permit
					</argLine>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<dependencies>
		<dependency>
			<groupId>ch.idsia.adaptive</groupId>
			<artifactId>adapquest-exchange</artifactId>
			<version>${adapquest.version}</version>
		</dependency>
		<dependency>
			<groupId>ch.idsia.adaptive</groupId>
			<artifactId>adapquest-backend</artifactId>
			<version>${adapquest.version}</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpclient</artifactId>
			<version>4.5.13</version>
		</dependency>
	</dependencies>
</project>
